Update dictionary processing and refactor code
Modified the path of the dictionary file and improved the error handling by throwing UncheckedIOException in the `ProcessDictionary` class. Also, refactored the `LoopsSortsAndIfs` class to use streams and functional programming. Added new word